--- a/public/carimobil.ejs
+++ b/public/carimobil.ejs
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#faq">FAQ</a>
                         </li>
                         <li class="nav-item px-1">
-                            <a type="button" class="btn btn-sm btn-success nav-link text-light" data-bs-toggle="modal" data-bs-target="#myModal">Register</a>
+                            <a type="button" class="btn btn-sm btn-danger nav-link text-light" href="/logout">Logout</a>
                             <!-- <button type="button" class="btn btn-success">Mulai Sewa Mobil</button> -->
                             <!-- The Modal -->
                             <div class="modal" id="myModal">
